<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/others_exchange_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@null">

    <RelativeLayout
        android:layout_width="@dimen/others_exchange_item_width"
        android:layout_height="@dimen/others_exchange_item_height"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:id="@+id/icon1"
            android:layout_width="@dimen/others_exchange_item_icon"
            android:layout_height="@dimen/others_exchange_item_icon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/call_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/icon1"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:text="@string/others_dial_exchange"
            android:textSize="@dimen/others_exchange_item_textsize"/>
        <TextView
            android:id="@+id/call_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textSize="@dimen/others_exchange_item_textsize"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="@dimen/others_exchange_item_width"
        android:layout_height="@dimen/others_exchange_item_height"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:id="@+id/icon2"
            android:layout_width="@dimen/others_exchange_item_icon"
            android:layout_height="@dimen/others_exchange_item_icon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/story_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/icon2"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:text="@string/others_story_exchange"
            android:textSize="@dimen/others_exchange_item_textsize"/>
        <TextView
            android:id="@+id/story_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textSize="@dimen/others_exchange_item_textsize"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="@dimen/others_exchange_item_width"
        android:layout_height="@dimen/others_exchange_item_height"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:id="@+id/icon3"
            android:layout_width="@dimen/others_exchange_item_icon"
            android:layout_height="@dimen/others_exchange_item_icon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/duration_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/icon3"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:text="@string/others_duration_exchange"
            android:textSize="@dimen/others_exchange_item_textsize"/>
        <TextView
            android:id="@+id/duration_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textSize="@dimen/others_exchange_item_textsize"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="@dimen/others_exchange_item_width"
        android:layout_height="@dimen/others_exchange_item_height"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:id="@+id/icon4"
            android:layout_width="@dimen/others_exchange_item_icon"
            android:layout_height="@dimen/others_exchange_item_icon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/english_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/icon4"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:text="@string/others_english_exchange"
            android:textSize="@dimen/others_exchange_item_textsize"/>
        <TextView
            android:id="@+id/english_exp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textSize="@dimen/others_exchange_item_textsize"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/others_discribe"
        android:textColor="@color/white"
        android:textSize="23dp"/>

</LinearLayout>
